src/main/java/com/example/springforumapp/errors/ApiError.java
package com.example.springforumapp.errors;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.http.HttpStatus;

@Data
@AllArgsConstructor
@NoArgsConstructor
public class ApiError {
    private int status;
    private String message;
    private String debugMessage;
    private long timestamp;
}
